--- a/partials/widgets/widget-text.hbs
+++ b/partials/widgets/widget-text.hbs
@@ -1,6 +1,6 @@
 <!-- Start Text Widget -->
 <div class="widget text">
-	<h1>{{@site.title}}</h1>
+	<img class="logo" src="{{@site.logo}}">
 	<div>
 		<p>{{@site.description}}</p>
 	</div>
