--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -23,259 +23,259 @@
 .post-meta,
 .tag {
   .nodejs {
-    color: #598708 !important;
+    background-color: #598708 !important;
 
     * {
-      color: #598708 !important;
+      background-color: #598708 !important;
     }
   }
 
   .aws {
-    color: #c37a32 !important;
+    background-color: #c37a32 !important;
 
     * {
-      color: #c37a32 !important;
+      background-color: #c37a32 !important;
     }
   }
 
   .django {
-    color: #43b78b !important;
+    background-color: #43b78b !important;
 
     * {
-      color: #43b78b !important;
+      background-color: #43b78b !important;
     }
   }
 
   .nosql {
-    color: #6eb14a !important;
+    background-color: #6eb14a !important;
 
     * {
-      color: #6eb14a !important;
+      background-color: #6eb14a !important;
     }
   }
 
   .sql {
-    color: #687ea5 !important;
+    background-color: #687ea5 !important;
 
     * {
-      color: #687ea5 !important;
+      background-color: #687ea5 !important;
     }
   }
 
   .restapis {
-    color: #a93e3e !important;
+    background-color: #a93e3e !important;
 
     * {
-      color: #a93e3e !important;
+      background-color: #a93e3e !important;
     }
   }
 
   .frontend {
-    color: #d7ac0a !important;
+    background-color: #d7ac0a !important;
 
     * {
-      color: #d7ac0a !important;
+      background-color: #d7ac0a !important;
     }
   }
 
   .data {
-    color: #1cccae !important;
+    background-color: #1cccae !important;
 
     * {
-      color: #1cccae !important;
+      background-color: #1cccae !important;
     }
   }
 
   .roundup {
-    color: #666fa5 !important;
+    background-color: #666fa5 !important;
 
     * {
-      color: #666fa5 !important;
+      background-color: #666fa5 !important;
     }
   }
 
   .excel {
-    color: #5bb85b;
+    background-color: #5bb85b;
 
     * {
-      color: #5bb85b !important;
+      background-color: #5bb85b !important;
     }
   }
 
   .devops {
-    color: #495f6d !important;
+    background-color: #495f6d !important;
 
     * {
-      color: #495f6d !important;
+      background-color: #495f6d !important;
     }
   }
 
   .pandas {
-    color: #c03694 !important;
+    background-color: #c03694 !important;
 
     * {
-      color: #c03694 !important;
+      background-color: #c03694 !important;
     }
   }
 
   .googlecloud {
-    color: #1990f5 !important;
+    background-color: #1990f5 !important;
 
     * {
-      color: #1990f5 !important;
+      background-color: #1990f5 !important;
     }
   }
 
   .mysql {
-    color: #7a588e !important;
+    background-color: #7a588e !important;
 
     * {
-      color: #7a588e !important;
+      background-color: #7a588e !important;
     }
   }
 
   .datascience {
-    color: #449a8c !important;
+    background-color: #449a8c !important;
 
     * {
-      color: #449a8c !important;
+      background-color: #449a8c !important;
     }
   }
 
   .tableau {
-    color: #ec9605 !important;
+    background-color: #ec9605 !important;
 
     * {
-      color: #ec9605 !important;
+      background-color: #ec9605 !important;
     }
   }
 
   .python {
-    color: #0A9CC5 !important;
+    background-color: #0A9CC5 !important;
 
     * {
-      color: #0A9CC5 !important;
+      background-color: #0A9CC5 !important;
     }
   }
 
   .flask {
-    color: #505d7f !important;
+    background-color: #505d7f !important;
 
     * {
-      color: #505d7f !important;
+      background-color: #505d7f !important;
     }
   }
 
   .statistics {
-    color: #34b27a !important;
+    background-color: #34b27a !important;
 
     * {
-      color: #34b27a !important;
+      background-color: #34b27a !important;
     }
   }
 
   .expressjs {
-    color: grey !important;
+    background-color: grey !important;
 
     * {
-      color: grey !important;
+      background-color: grey !important;
     }
   }
 
   .atlassian {
-    color: #36408c !important;
+    background-color: #36408c !important;
 
     * {
-      color: #36408c !important;
+      background-color: #36408c !important;
     }
   }
 
   .dataengineering {
-    color: #4c5777 !important;
+    background-color: #4c5777 !important;
 
     * {
-      color: #4c5777 !important;
+      background-color: #4c5777 !important;
     }
   }
 
   .codesnippetcorner {
-    color: #747d9a !important;
+    background-color: #747d9a !important;
 
     * {
-      color: #747d9a !important;
+      background-color: #747d9a !important;
     }
   }
 
   .javascript {
-    color: #ad8303 !important;
+    background-color: #ad8303 !important;
 
     * {
-      color: #ad8303 !important;
+      background-color: #ad8303 !important;
     }
   }
 
   .saas {
-    color: #3d5075 !important;
+    background-color: #3d5075 !important;
 
     * {
-      color: #3d5075 !important;
+      background-color: #3d5075 !important;
     }
   }
 
   .datavis {
-    color: #5a8a8a !important;
+    background-color: #5a8a8a !important;
 
     * {
-      color: #5a8a8a !important;
+      background-color: #5a8a8a !important;
     }
   }
 
   .plotly {
-    color: #155a8b;
+    background-color: #155a8b;
 
     * {
-      color: #155a8b !important;
+      background-color: #155a8b !important;
     }
   }
 
   .postgresql {
-    color: #425167;
+    background-color: #425167;
 
     * {
-      color: #425167 !important;
+      background-color: #425167 !important;
     }
   }
 
   .bigdata {
-    color: #12b3a3;
+    background-color: #12b3a3;
 
     * {
-      color: #12b3a3 !important;
+      background-color: #12b3a3 !important;
     }
   }
 
   .graphql {
-    color: #bc6391;
+    background-color: #bc6391;
 
     * {
-      color: #bc6391 !important;
+      background-color: #bc6391 !important;
       fill: #bc6391 !important;
     }
   }
 
   .apache {
-    color:#d5212a;
+    background-color:#d5212a;
 
     * {
-      color:#d5212a !important;
+      background-color:#d5212a !important;
     }
   }
 
   .spark {
-    color: #e77115;
+    background-color: #e77115;
 
     * {
-      color: #e77115 !important;
+      background-color: #e77115 !important;
     }
   }
 }
