--- a/src/less/global/widgets/social-widget.less
+++ b/src/less/global/widgets/social-widget.less
@@ -2,7 +2,7 @@
   .social-btns {
     padding: 0;
     display: flex;
-    margin: 0 !important;
+    margin: 10px 0 0;
     justify-content: space-between;
 
     .btn {
@@ -10,14 +10,11 @@
       justify-content: space-around;
       display: inline-flex;
       background-color: #fff;
-      width: 40px;
-      height: 40px;
       line-height: 40px;
       margin: 0 3px;
       text-align: center;
       position: relative;
       overflow: hidden;
-      border: 1px solid #efefef;
       opacity: 0.99;
       padding: 0;
       @media(max-width: 950px) {
@@ -28,6 +25,7 @@
     .fab,
     i {
       margin: 0 !important;
+      font-size: 1.3em;
     }
     @media (max-width: 1000px) {
       a {
