--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -1,14 +1,56 @@
 <!-- Start Header -->
 <nav>
     <div class="nav-wrapper">
-    {{#if @site.logo}}
+      <div class="left-nav">
+    {{#if @site.icon}}
       <a class="logo" href="{{@site.url}}/">
-        <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
+        <img src="{{@site.icon}}" alt="{{@site.title}}" data-rjs="2">
       </a>
-    {{else}}
-      <a class="branding" href="{{@site.url}}/">{{@site.title}}</a>
+      <div class="dropdown posts">
+        <a href="{{@site.url}}/archive/"><button class="dropdown">Posts</button></a>
+        <div class="dropdown-content">
+          {{#get "tags" filter="slug:-[roundup,excel,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" limit="10" include="count.posts" order="count.posts DESC" }}
+            {{#foreach tags}}
+              <a href="{{url}}">{{name}}</a>
+            {{/foreach}}
+          {{/get}}
+        </div>
+      </div>
+
+      <div class="dropdown pages">
+        <button class="dropdown">Pages</button>
+        <div class="dropdown-content">
+          <a href="{{@site.url}}/about/">About Us</a>
+          <a href="{{@site.url}}/series/">Series</a>
+          <a href="{{@site.url}}/projects/">Projects</a>
+          <a href="{{@site.url}}/resources/">Resources</a>
+          <a href="{{@site.url}}/become-a-contributor/">Join The Club</a>
+        </div>
+      </div>
+
+      <div class="dropdown authors">
+        <a href="{{@site.url}}/about/"><button class="dropdown">Authors</button></a>
+        <div class="dropdown-content">
+          {{#get "authors" include="count.posts"}}
+            {{#foreach authors}}
+              <a href="{{url}}" class="link">{{name}}</a>
+            {{/foreach}}
+          {{/get}}
+        </div>
+      </div>
+
+      <div class="dropdown publications">
+        <a href="{{@site.url}}/series/"><button class="dropdown">Series'</button></a>
+        <div class="dropdown-content">
+          {{#get "tags" filter="feature_image:-null+slug:-[starting-django,plotly-dash]" include="count.posts,meta_title,slug" order="count.posts DESC" limit="all"}}
+            {{#foreach tags visibility="internal"}}
+              <a href="/series/{{slug}}/">{{meta_title}}</a>
+            {{/foreach}}
+          {{/get}}
+        </div>
+      </div>
     {{/if}}
-    {{> nav/desktop-navigation}}
   </div>
+</div>
 </nav>
 <!-- End Header -->
