--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -1,12 +1,15 @@
 .page-container {
 	max-width: 1050px;
-	margin: auto;
-	max-width: 95%;
+	margin: 0 auto 30px;
 	@media(max-width: 1200px) {
 		width: 100%;
 	}
+	@media(max-width: 1000px) {
+		 max-width: 95%;
+	}
 	@media(max-width: @tablet-breakpoint) {
 		max-width: none;
+		margin: 0 auto;
 	}
 
 	&.home {
@@ -19,11 +22,8 @@
 
 	&.sidebar-layout {
 		display: grid;
-		grid-gap: 40px;
-		grid-template-columns: 316px 1fr;
-		@media(max-width: 1000px) {
-			grid-gap: 30px;
-		}
+		grid-gap: 20px;
+		grid-template-columns: 1fr 316px ;
 		@media(max-width: @tablet-breakpoint) {
 			width: 100%;
 			display: block;
