--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -2,21 +2,10 @@
 @import "mixin.less";
 
 .post-preview {
-	padding: 15px;
 	margin-bottom: 30px;
-	background: white;
-	box-shadow: @shadow-color;
-	transition: background .2s ease-out;
 	order: 2;
-
-	&:hover {
-		cursor: pointer;
-		background: #90d1ff;
-
-		* {
-			color: white !important;
-		}
-	}
+	display: flex;
+	justify-content: space-between;
 	@media(max-width:600px) {
 		padding: 0;
 	}
@@ -25,76 +14,48 @@
 		border-bottom: none;
 	}
 
-	.post-content {
-		text-align: left;
-		line-height: 1.3;
-		margin: 17px 3px 15px;
-
-		& > * {
+	.post-preview-side {
+		width: 90px;
+    margin-right: 20px;
+		@media(max-width: @tablet-breakpoint) {
 			display: none;
 		}
 
-		p:first-child {
-			display: -webkit-box;
-			overflow: hidden;
-			-webkit-line-clamp: 3;
-			-webkit-box-orient: vertical;
-			text-overflow: ellipsis;
-			font-family: @body-font !important;
-			line-height: 1.55;
-			font-size: 1em;
-			font-weight: 500;
-			color: #2d2f35;
-			margin-bottom: 30px;
-			@media(max-width: @mobile-breakpoint) {
-				font-size: 0.9em;
-				line-height: 1.6em;
-				margin-bottom: 15px;
-				display: none;
-			}
-
-			a {
-				font-family: @body-font !important;
-				display: inline !important;
-			}
+		.primary-tag {
+			background: grey;
+			padding: 5px 10px;
+			border-radius: 10px;
+			color: white;
+			text-transform: uppercase;
+			font-size: .7em;
+			margin-top: 24px;
+			display: block;
+			line-height: 1.2;
+			text-align: center;
+			width: fit-content;
+			float: right;
 		}
 	}
 
-	.post-image {
-		box-sizing: border-box;
-		height: fit-content;
-		display: block;
-		margin: 0 0 2px;
-		transition: @transition;
-
-		img {
-			width: 100%;
-			height: auto;
-		}
-		@media(max-width: @mobile-breakpoint) {
-			margin: 0 auto;
-		}
-
-		.featured-image {
-			width: 100%;
-			height: auto;
-		}
-
-		&:hover {
-			opacity: 0.7;
-			cursor: pointer;
-		}
+	.post-preview-body {
+		border-bottom: 1px solid #e9e9e9;
+		width: 100%;
 	}
 
 	.post-head {
-		margin: 0 0 15px;
+		margin: 0;
+
+		.date {
+			color: #738a94;
+			font-size: 12px;
+			line-height: 1;
+		}
 
 		.post-title {
-			font-size: 1.9em;
+			font-size: 1.35em;
 			Line-height: 1.15;
-			margin: 0 0 5px;
-			font-weight: 900;
-			font-family: @header-font-bold;
+			font-family: @body-font;
+			margin: 2px 0;
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 1.5em;
 				margin: 5px 0;
@@ -105,14 +66,12 @@
 			a {
 				color: @h1-color;
 				transition: @transition;
-				font-family: @header-font-bold;
 
 				&:hover {
 					color: @hover-color;
 				}
 				@media(max-width: @mobile-breakpoint) {
 					font-family: @header-font-bold;
-					font-weight: 500;
 
 					&:hover {
 						color: white;
@@ -128,6 +87,7 @@
 			font-family: @header-font;
 			transition: @transition;
 			color: @h1-color;
+			font-size: 1em;
 			@media(max-width: @mobile-breakpoint) {
 				margin: 5px auto 0;
 				font-size: 1.05em !important;
@@ -140,178 +100,47 @@
 		}
 	}
 
-	&.featured {
-		order: 0;
-	}
+	.featured-image {
+		width: 100%;
+		height: auto;
+		transition: @transition;
+		border-radius: 2px;
+		    margin: 15px 0;
 
-	.featured {
-		position: absolute;
-		background: @theme-color;
-		color: white;
-		text-align: center;
-		top: -12px;
-		right: -32px;
-		width: 80px;
-		height: 40px;
-		line-height: 54px;
-		.transform(rotate(45deg));
-		font-size: 12px;
-		z-index: 10;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.39);
-
-		i {
-			.transform(rotate(-45deg));
-			margin-right: 2px;
-			font-size: 13px;
+		&:hover {
+			opacity: 0.7;
+			cursor: pointer;
 		}
 	}
 
-	i {
-		margin-right: 10px;
-		font-size: 17px;
-		font-weight: 400;
-	}
+	.preview-content {
+		text-align: left;
+		line-height: 1.3;
+		margin: 0;
 
-	.meta {
-		display: flex;
-		align-items: center;
-		font-family: @body-font;
-		justify-content: left;
-		@media(max-width:1000px) {
-			justify-content: left;
-		}
-		@media(max-width:600px) {
-			padding-right: 0 !important;
-			margin-right: 0;
-			display: flex;
-			justify-content: left;
+		& > * {
+			display: none;
 		}
 
-		a {
-			color: #5aa8bf;
-			font-family: @body-font;
-		}
-
-		.meta-item {
-			display: flex;
-			font-family: @body-font;
-			align-items: center;
-			font-size: .8em;
-			padding: 0;
-			margin-right: 40px;
-			@media(max-width: 1000px) {
-				margin: auto 40px auto 0 !important;
+		p:first-child {
+			display: -webkit-box;
+			overflow: hidden;
+			-webkit-line-clamp: 3;
+			-webkit-box-orient: vertical;
+			text-overflow: ellipsis;
+			font-family: @body-font !important;
+			line-height: 1.55;
+			font-size: 0.95em;
+			font-weight: 500;
+			color: #2d2f35;
+			margin: 0;
+			@media(max-width: @mobile-breakpoint) {
+				display: none;
 			}
 
-			i {
-				height: 16px;
-				display: inline-block;
-			}
-
-			&.tags {
-				font-weight: 600;
-				background: none !important;
-				display: flex;
-				align-items: center;
-				border: 0 !important;
-				@media(max-width: @mobile-breakpoint) {
-					font-size: .9em;
-					margin: 0;
-					height: 33px !important;
-				}
-
-				&:hover {
-					cursor: pointer;
-					color: unset;
-				}
-
-				span {
-					line-height: 1.2;
-					font-family: @bold-font;
-					transition: @transition;
-					@media(max-width: @mobile-breakpoint) {
-						font-weight: 100;
-					}
-
-					&:hover {
-						cursor: pointer;
-					}
-				}
-
-				i {
-					font-size: 20px;
-					height: 20px;
-					margin-right: 7px;
-					@media(max-width: @mobile-breakpoint) {
-						font-size: 18px;
-						height: fit-content;
-					}
-
-					&:hover {
-						cursor: pointer;
-					}
-				}
-
-			}
-
-			&.author {
-				i {
-					color: @meta-color;
-					@media(max-width: @mobile-breakpoint) {
-						color: #474b55;
-					}
-				}
-
-				span {
-					font-family: @body-font;
-					color: @meta-color;
-					line-height: 1;
-					overflow: hidden;
-					white-space: nowrap;
-					text-overflow: ellipsis;
-					transition: @transition;
-
-					&:hover {
-						cursor: pointer;
-					}
-
-					* {
-						&:hover {
-							cursor: pointer;
-						}
-					}
-				}
-			}
-
-			&.author {
-
-				&:hover {
-					cursor: pointer;
-				}
-				@media (max-width: 1000px) {
-					margin: auto 80px auto 0;
-				}
-				@media (max-width: 800px) {
-					display: none !important;
-				}
-			}
-
-			&.date {
-				span {
-					font-family: @body-font;
-					overflow: hidden;
-					white-space: nowrap;
-					text-overflow: ellipsis;
-					font-size: 0.9em;
-				}
-				@media (max-width: 1000px) {
-					display: none !important;
-				}
-
-				i {
-					height: 20px;
-					font-size: 16px;
-				}
+			a {
+				font-family: @body-font !important;
+				display: inline !important;
 			}
 		}
 	}
@@ -328,89 +157,9 @@
 		}
 	}
 
-	.post-permalink {
-		text-align: left;
-		display: flex;
-		justify-content: space-between;
-		padding: 0 0 5px;
-		align-items: center;
-		transition: @transition;
-		@media(max-width: 950px) {
-			padding: 0 0 0;
-		}
+	.read-link {
+		margin: 10px 0 20px;
+		display: block;
+		font-size: 1.1em;
 	}
-
-	.btn {
-		padding: 14px 22px;
-		background: @button-color;
-		color: white;
-		font-family: @bold-font;
-		font-size: 16px;
-		line-height: 1;
-		text-transform: uppercase;
-		letter-spacing: 1px;
-		transition: @transition;
-
-		&:hover {
-			background: @hover-color;
-			cursor: pointer !important;
-			color: white;
-		}
-		@media(max-width: @mobile-breakpoint) {
-			/*display: none;*/
-			padding: 13px 18px;
-			font-size: 14px;
-			height: fit-content;
-		}
-	}
-
-	&.tag-video {
-		padding: 0;
-
-		.post-head {
-			display: none;
-		}
-
-		.fluid-width-video-wrapper {
-			display: block !important;
-		}
-
-		.post-permalink {
-			display: none;
-		}
-
-		.post-content {
-			margin: 0;
-			@media (max-width: 600px) {
-				overflow-x: hidden !important;
-			}
-		}
-	}
-
-	.avi {
-		width: 30px;
-		height: 30px;
-		display: inline-block;
-		margin-right: 10px;
-		border-radius: 1px;
-		@media(max-width: @mobile-breakpoint) {
-			margin-right: 15px;
-			width: 45px;
-			height: 45px;
-		}
-	}
-}
-
-.content {
-	padding: 0 10px;
-	@media(max-width: 950px) {
-		padding: 0 2px;
-	}
-	@media(max-width: @mobile-breakpoint) {
-		 padding: 0 15px 15px;
-	}
-}
-
-.twitter-tweet {
-	display: none !important;
 }
