--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -9,21 +9,30 @@
 .sidebar {
 
 	.widget {
-		background: white;
-		padding: 20px;
-		box-shadow: @shadow-color;
-		transition: all 0.3s ease-out;
+		padding: 25px;
+		background: #fff 50%;
+		background-size: cover;
+		border-radius: 5px;
+		box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);
+		transition: all .5s ease;
 
 		&:first-of-type {
 			margin-right: 0;
 		}
 
 		&.text {
+
+			.logo {
+				width: 80%;
+		    margin: 0 auto 20px;
+		    display: block;
+			}
 			p {
-				font-size: 15px;
+				font-size: 14px;
 				font-family: @body-font;
-				font-weight: 300;
-				line-height: 1.6;
+				line-height: 1.3;
+				text-align: center;
+				text-align: justify;
 			}
 		}
 
