post previews on pages

--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -1,6 +1,6 @@
 .page-container {
 	max-width: 1050px;
-	margin: 0 auto 30px;
+	margin: 30px auto;
 	@media(max-width: 1200px) {
 		width: 100%;
 	}
@@ -9,7 +9,7 @@
 	}
 	@media(max-width: @tablet-breakpoint) {
 		max-width: none;
-		margin: 0 auto;
+		margin: 20px auto;
 	}
 
 	&.home {
