--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -161,5 +161,8 @@
 		margin: 10px 0 20px;
 		display: block;
 		font-size: 1.1em;
+		@media(max-width: @mobile-breakpoint) {
+			display: none;
+		}
 	}
 }
