--- a/post.hbs
+++ b/post.hbs
@@ -7,6 +7,7 @@
 			<div class="post-header">
 				<h1 class="post-title">{{{title}}}</h1>
 				<h4 class="excerpt">{{excerpt}}</h4>
+				</div>
 				<!-- start responsive image -->
 				{{#if feature_image}}
 					<div class="post-image">
@@ -18,7 +19,7 @@
 				<!-- start post metadata -->
 				<div class="post-meta">
 					{{#primary_tag}}
-						<span class="tags meta-item {{slug}}"><i class="far d fa-tags"></i> <span>{{name}}</span></span>
+						<span class="tags meta-item {{slug}}">{{name}}</span>
 					{{/primary_tag}}
 					{{#primary_author}}
 						<a href="{{url}}" class="meta-item author desktop"><i class="far fa-user-edit" style="width:13px; display:inline-block; margin-right:10px;"></i>
@@ -27,7 +28,7 @@
 					<span class="date meta-item"><i class="far d fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
 					<span class="readtime meta-item"><i class="far d fa-eye"></i> <span>{{reading_time}}</span></span>
 				</div>
-			</div>
+			
 			<!-- end post metadata -->
 
 			{{! Lists Table-of-Contents-Like list if post is in a series. }}
