--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -30,8 +30,8 @@
         display: -webkit-box;
         text-overflow: ellipsis;
       }
-
-      .post-excerpt {
+      
+      .preview-content {
         display: none;
       }
 
