--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -8,6 +8,7 @@
 	background-size: cover;
 	padding: 35px 8%;
 	color: @text-color;
+	border-top: 1px solid #dbe0e5;
 	@media(max-width: 1000px) {
 		padding: 30px 40px;
 	}
