--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -29,6 +29,9 @@
   display: grid;
   grid-gap: 40px;
   grid-template-columns: 1fr;
+  @media(max-width: @mobile-breakpoint) {
+    grid-gap: 20px;
+  }
 
 
   .post-preview {
