--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -15,11 +15,9 @@
 		margin: 0 auto 40px;
 		width: 100%;
 		max-width: 760px;
-		padding-top: 30px;
 		@media(max-width: @tablet-breakpoint) {
 			width: 85%;
 			margin: 0 auto 20px;
-			padding-top: 25px;
 		}
 	}
 
@@ -36,6 +34,15 @@
 			width: 100% !important;
 		}
 		}
+		
+		.post-header {
+		  padding: 40px 0;
+		  margin: 0;
+			text-align: center;
+		  @media(max-width: @mobile-breakpoint) {
+		    padding: 0;
+		  }
+		}
 
 		.post-image {
 			line-height: 1;
@@ -44,12 +51,10 @@
 			overflow: hidden;
 			max-height: 453px;
 			@media(max-width: @tablet-breakpoint) {
-				margin: 20px 0 0;
 				height: unset;
 				max-height: 356px;
 			}
 			@media (max-width: 600px) {
-				margin: 20px 0 0;
 				max-height: 286px;
 			}
 			@media (max-width: 400px) {
@@ -65,7 +70,6 @@
 		}
 
 		.post-title {
-			text-align: left;
 			width: -webkit-fill-available;
 			margin: 0 0 5px;
 			display: block;
@@ -88,7 +92,7 @@
 		.excerpt {
 			font-weight: 600;
 			font-size: 1.2em;
-			margin: 5px 0 30px;
+			margin: 5px 0 0;
 			line-height: 1.3;
 			color: @h1-color;
 			font-family: @header-font;
