--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -25,7 +25,7 @@
         {{/has}}
     {{/if}}
     <div class="preview-content">{{content words=100}}</div>
-    <a href="{{url}}" class="read-link">{{t "Continue Reading"}}</a>
+    <a href="{{url}}" class="read-link">{{t "Continue Reading"}} <i class="far fa-arrow-right"></i></a>
   </div>
 
 </article>
