--- a/partials/widgets/widget-text.hbs
+++ b/partials/widgets/widget-text.hbs
@@ -1,6 +1,8 @@
 <!-- Start Text Widget -->
 <div class="widget text">
-	<img class="logo" src="{{@site.logo}}">
+	<a href="{{@site.url}}">
+		<img class="logo" src="{{@site.logo}}">
+	</a>
 	<div>
 		<p>{{@site.description}}</p>
 	</div>
