--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -2,6 +2,7 @@
 
 .author-template {
 	.cover {
+		border-bottom: 1px solid #eaedf1;
 		@media(max-width: @mobile-breakpoint){
 			margin-left: calc(~"-50vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
