--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 
 .author-card-small {
-  border-radius: 2px !important;
+  border-radius: 5px;
   background: #fff !important;
   padding: 0;
   margin: 20px 0;
