--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -22,7 +22,6 @@
 		}
 
 		.primary-tag {
-			background: grey;
 			padding: 5px 10px;
 			border-radius: 10px;
 			color: white;
@@ -161,6 +160,10 @@
 		margin: 10px 0 20px;
 		display: block;
 		font-size: 1.1em;
+
+		i {
+			margin-left: 5px;
+		}
 		@media(max-width: @mobile-breakpoint) {
 			display: none;
 		}
