--- a/src/less/global/social.less
+++ b/src/less/global/social.less
@@ -29,7 +29,6 @@
 .social-btns .btn:focus .fab,
 .social-btns .btn:hover .fab,
 .social-btns .btn:hover .fas {
-  color: #fff;
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
@@ -79,8 +78,8 @@
       }
 
       &:hover {
-        background-color: lighten(@medium-color, 10%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -90,8 +89,8 @@
       }
 
       &:hover {
-        background-color: lighten(@facebook-color, 20%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -101,8 +100,8 @@
       }
 
       &:hover {
-        background-color: lighten(@twitter-color, 10%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -112,8 +111,8 @@
       }
 
       &:hover {
-        background-color: lighten(@github-color, 10%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -123,8 +122,8 @@
       }
 
       &:hover {
-        background-color: lighten(@tumblr-color, 20%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -134,8 +133,8 @@
       }
 
       &:hover {
-        background-color: lighten(@rss-color, 20%) !important;
-        color: white !important;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -143,8 +142,8 @@
       color: lighten(#f14861, 10%);
 
       &:hover {
-        background-color: lighten(#f14861, 10%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -152,8 +151,8 @@
       color: lighten(#b92b27, 10%);
 
       &:hover {
-        background-color: lighten(#b92b27, 10%) !important;
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
 
@@ -161,8 +160,8 @@
       color: lighten(@linkedin-color, 10%);
 
       &:hover {
-        background-color: lighten(@linkedin-color, 10%);
-        color: white;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
       }
     }
   }
