--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -21,6 +21,7 @@
       margin: 0 auto;
       background: rgba(255, 255, 255, .6);
       overflow: hidden;
+      border-radius: 5px;
 
       @media(max-width: 900px) {
         margin: 0;
