--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -8,6 +8,7 @@
     }
 
     .single-post {
+      border-radius: 5px;
       background: white;
       overflow: hidden;
       transition: all .3s ease-out;
