--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -2,7 +2,7 @@
 <div class="widget about">
   {{#if @site.logo}}
     <a class="logo"href="{{@site.url}}/">
-      <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
+      <img src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/redesign-assets/logodark.png" alt="{{@site.title}}" data-rjs="2">
     </a>
   {{/if}}
   <p class="description">{{@site.description}}</p>
