--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -22,11 +22,23 @@
 
 		&.text {
 
+			a {
+				transition: @transition;
+				&:hover {
+					opacity: 7;
+				}
+			}
+
 			.logo {
 				width: 80%;
 		    margin: 0 auto 20px;
 		    display: block;
+
+				&:hover {
+					opacity: 7;
+				}
 			}
+
 			p {
 				font-size: 14px;
 				font-family: @body-font;
