--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -9,7 +9,7 @@
 	margin:  0 0 20px;
 	width: -webkit-fill-available;
 	width: -moz-available;
-	box-shadow: @shadow-color;
+	border-radius: 5px;
 	@media(max-width: @tablet-breakpoint) {
 		margin: 0 auto 20px;
 		padding: 40px 0;
