--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -5,6 +5,14 @@
 .post-template {
 	nav {
 		margin-bottom: 0 !important;
+
+		.nav-wrapper {
+			max-width: 760px;
+			@media(max-width: @mobile-wrapper){
+				width: 85%;
+    		margin: auto;
+			}
+		}
 	}
 
 	.sidebar {
@@ -34,13 +42,13 @@
 			width: 100% !important;
 		}
 		}
-		
+
 		.post-header {
-		  padding: 40px 0;
+		  padding: 50px 0;
 		  margin: 0;
 			text-align: center;
 		  @media(max-width: @mobile-breakpoint) {
-		    padding: 0;
+		    padding: 30px 0;
 		  }
 		}
 
