--- a/src/less/global.less
+++ b/src/less/global.less
@@ -11,3 +11,4 @@
 @import './global/widgets/series-widget.less';
 @import './global/widgets/social-widget.less';
 @import './global/widgets/tag-widget.less';
+@import './global/widgets/featured-widget.less';
