--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -154,12 +154,14 @@
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
-		margin-bottom: 20px;
+		margin-bottom: 18px;
+
+		.btn {
+			color: #738a94;
+		}
 
 		i {
 			font-size: 20px;
-			mix-blend-mode: hard-light;
-			color: @text-color;
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 25px;
 			}
