--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -108,10 +108,10 @@
   }
 
   .pandas {
-    background-color: #c03694 !important;
+    background-color: #e976c4 !important;
 
     * {
-      background-color: #c03694 !important;
+      background-color: #e976c4 !important;
     }
   }
 
@@ -148,10 +148,10 @@
   }
 
   .python {
-    background-color: #0A9CC5 !important;
+    background-color: #16b9e7 !important;
 
     * {
-      background-color: #0A9CC5 !important;
+      background-color: #16b9e7 !important;
     }
   }
 
@@ -269,9 +269,9 @@
   }
 
   .spark {
-    background-color: #e77115;
+    background-color: #efb13c;
 
     * {
-      background-color: #e77115 !important;
+      background-color: #efb13c !important;
     }
   }
