--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -8,7 +8,7 @@
 
 		.nav-wrapper {
 			max-width: 760px;
-			@media(max-width: @mobile-wrapper){
+			@media(max-width: @mobile-breakpoint){
 				width: 85%;
     		margin: auto;
 			}
