--- a/partials/widgets/widget-text.hbs
+++ b/partials/widgets/widget-text.hbs
@@ -1,7 +1,7 @@
 <!-- Start Text Widget -->
 <div class="widget text">
-	<a href="{{@site.url}}">
-		<img class="logo" src="{{@site.logo}}">
+	<a href="{{@site.url}}" class="logo">
+		<img src="{{@site.logo}}">
 	</a>
 	<div>
 		<p>{{@site.description}}</p>
