post preview mobile padding

--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -12,7 +12,7 @@
 	background: none;
 	width: 100%;
 	@media(max-width: @mobile-breakpoint) {
-		 margin: 10px auto 30px;
+		 margin: 0;
 	}
 
 	.older-posts {
