--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -14,10 +14,7 @@
   }
   @media(max-width: @mobile-breakpoint) {
     max-width: 80%;
-  }
-
-  .post-preview {
-    overflow: hidden;
+    padding: 30px;
   }
 
   &:last-child {
