--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -165,12 +165,12 @@
 		margin: 20px 0;
 		display: block;
 		font-size: 1.1em;
+		@media(max-width:600px) {
+			margin: 20px 0 0;
+		}
 
 		i {
 			margin-left: 5px;
-		}
-		@media(max-width: @mobile-breakpoint) {
-			display: none;
 		}
 	}
 }
